--- a/assets/style.css
+++ b/assets/style.css
@@ -47,13 +47,12 @@ main {
   margin: 5px 0;
   background-color: grey;
   color: white;
-
 }
 
 /* style where current day weather displays */
 .today {
   border: solid 1px black;
-  height: 50%;
+ height: auto;
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -76,7 +75,7 @@ main {
 
   margin: 10px 10px 10px 10px;
   border: solid 1px black;
-  height: 300px;
+ 
   width: 200px;
   background-color: rgb(86, 145, 233);
 }
